--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         width="80"
         height="80"
         viewBox="0 0 250 250"
-        style="fill:#ffd600; color:#1a237e; position: absolute; top: 0; border: 0; right: 0;"
+        style="fill:#ffd600; color:#1a237e; position: fixed; top: 0; border: 0; right: 0;"
         aria-hidden="true"
       >
         <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" />
